change dir name and improving index and sw

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Disquesea PWA</title>
+
     <link rel="stylesheet" href="style.css">
+
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#363f5f">
+    <link rel="icon" href="icons/disquesea-logo.png" type="image/png">
 </head>
 
 <body>
