--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 
 <body>
     <header>
-        <img src="./assets/disquesea-logo.png" width="120" height="120" alt="Disquesea">
+        <img src="./icons/disquesea-logo.png" width="120" height="120" alt="Disquesea">
     </header>
     <main class='container'>
         <section id="control">
             <div class="card">
                 <a href="#" class="button operation" id="buttonIn">
                     <span>Entrada</span>
-                    <img src="./assets/income.svg" alt="Imagem de entradas">
+                    <img src="./icons/income.svg" alt="Imagem de entradas">
                 </a>
             </div>
             <div class="card">
                 <a href="#" class="button operation" id="buttonOut">
                     <span>Saída</span>
-                    <img src="./assets/expense.svg" alt="Imagem de saídas">
+                    <img src="./icons/expense.svg" alt="Imagem de saídas">
                 </a>
             </div>
         </section>
