--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <form action='' id="sendForm">
                     <div class='input-group'>
                         <label for='phone'>Telefone</label>
-                        <input type='text' id='phone' name='phone' placeholder ='(XX) XXXXX-XXXX'>
+                        <input type='text' id='phone' name='phone' placeholder ='55 (XX) XXXXX-XXXX'>
                         <small class='help'>Insira o número para enviar histórico</small>
                     </div>
                     <div class='input-group actions'>
